Fixed Input date type blank field issue and shift the arrow in card to right end

--- a/src/styles/Display.module.css
+++ b/src/styles/Display.module.css
@@ -15,6 +15,9 @@
     padding: 1rem 2rem;
 }
 .listTask li {
+    width: 250px;
+    min-width: 250px;
+    max-width: 250px;
     position: relative;
     display: flex;
     flex-direction: column;
